--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "angularfire2": "^5.1.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.9.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
